--- a/website/pages/docs/llm/strategy.mdx
+++ b/website/pages/docs/llm/strategy.mdx
@@ -6,7 +6,7 @@ import { Callout, Tabs } from 'nextra/components'
   "Compiled JavaScript File",
   "Console Output"]}>
   <Tabs.Tab>
-```typescript filename="example/src/llm.application.bbs.ts" showLineNumbers copy
+```typescript filename="example/src/llm.application.bbs.ts" showLineNumbers {11, 15-17} copy
 import { ILlmApplication, ILlmFunction } from "@samchon/openapi";
 import typia, { tags } from "typia";
 
@@ -379,7 +379,7 @@ interface IMember {
   "Compiled JavaScript File",
   "Console Output"]}>
   <Tabs.Tab>
-```typescript filename="example/src/llm.application.bbs.ts" showLineNumbers {13-18, 35-38, 65-70} copy
+```typescript filename="example/src/llm.application.bbs.ts" showLineNumbers {11, 13-18, 35-38, 65-70} copy
 import { ILlmApplication, ILlmFunction } from "@samchon/openapi";
 import typia, { tags } from "typia";
 
