Highlight some lines

--- a/website/pages/docs/llm/parameters.mdx
+++ b/website/pages/docs/llm/parameters.mdx
@@ -507,7 +507,7 @@ Just configure output mode as JSON schema, and deliver the `typia.llm.parameters
 
 
 ## Validation Feedback
-```typescript filename="src/examples/llm.parameters.ts" showLineNumbers copy
+```typescript filename="src/examples/llm.parameters.ts" copy showLineNumbers {4-10, 13, 32-49, 55, 60}
 import OpenAI from "openai";
 import typia, { IValidation, tags } from "typia";
 
