--- a/website/pages/docs/validators/assert.mdx
+++ b/website/pages/docs/validators/assert.mdx
@@ -705,7 +705,7 @@ import typia, { AssertionGuard } from "typia";
 //MUST DECLARE THE VARIABLE TYPE
 const explicit: AssertionGuard<number> = typia.createAssertGuard<number>();
 
-// IF NOT, COMPILATION ERROR BE OCCURED
+// IF NOT, COMPILATION ERROR BE OCCURRED
 const implicit = typia.createAssertGuard<number>();
 ```
 
