--- a/website/pages/docs/misc.mdx
+++ b/website/pages/docs/misc.mdx
@@ -1984,7 +1984,7 @@ By the way, as URL query is not enough to express complex data structures, `typi
   3. Only boolean, bigint, number, string or their array types are allowed
   4. By the way, union type never be not allowed
 
-Also, `typia.http.query<T>()` function does not perform validation about the decoded value. Therefore, if you can't sure that input data is following the `T` type, it would better to call one of below functions intead.
+Also, `typia.http.query<T>()` function does not perform validation about the decoded value. Therefore, if you can't sure that input data is following the `T` type, it would better to call one of below functions instead.
 
   - `typia.http.assertQuery<T>()`: [`typia.assert<T>()`](./validators/assert) + `typia.http.query<T>()`
   - `typia.http.isQuery<T>()`: [`typia.is<T>()`](./validators/is) + `typia.http.query<T>()`
@@ -2273,7 +2273,7 @@ By the way, as HTTP headers are not enough to express complex data structures, `
     - server
     - user-agent
 
-Also, `typia.http.headers<t>()` function does not perform validation about the decoded value. Therefore, if you can't sure that input data is following the `T` type, it would better to call one of below functions intead.
+Also, `typia.http.headers<t>()` function does not perform validation about the decoded value. Therefore, if you can't sure that input data is following the `T` type, it would better to call one of below functions instead.
 
   - `typia.http.assertHeaders<T>()`: [`typia.assert<T>()`](./validators/assert) + `typia.http.headers<T>()`
   - `typia.http.isHeaders<T>()`: [`typia.is<T>()`](./validators/is) + `typia.http.headers<T>()`
