Assign titles for each website document

--- a/website/pages/docs/llm/application.mdx
+++ b/website/pages/docs/llm/application.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Large Language Model > application() function
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## `application()` function
