--- a/website/pages/docs/llm/parameters.mdx
+++ b/website/pages/docs/llm/parameters.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Large Language Model > parameters() function
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## `parameters()` function
