--- a/website/pages/docs/llm/schema.mdx
+++ b/website/pages/docs/llm/schema.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Large Language Model > schema() function
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## `schema()` function
