--- a/website/pages/docs/utilization/hono.mdx
+++ b/website/pages/docs/utilization/hono.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > Utilization Cases > Hono
+---
+
 [Hono](https://hono.dev) is a small, simple, and ultrafast web framework for the Edges.
 
 If you are using `Hono` with `typia`, you can use [ `@hono/typia-validator` ](https://github.com/honojs/middleware/tree/main/packages/typia-validator) to validate the request body.
