--- a/website/pages/docs/utilization/trpc.mdx
+++ b/website/pages/docs/utilization/trpc.mdx
@@ -1,3 +1,7 @@
+---
+title: Guide Documents > Utilization Cases > tRPC
+---
+
 ```typescript copy showLineNumbers {11-12}
 import { initTRPC } from "@trpc/server";
 import { v4 } from "uuid";
