--- a/website/pages/docs/validators/is.mdx
+++ b/website/pages/docs/validators/is.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Runtime Validators > is() functions
+---
 import { Tabs } from 'nextra/components'
 import Alert from '@mui/material/Alert';
 import AlertTitle from '@mui/material/AlertTitle';
