--- a/website/pages/docs/index.mdx
+++ b/website/pages/docs/index.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Introduction
+---
 import Alert from '@mui/material/Alert';
 import Stack from '@mui/material/Stack';
 
