--- a/website/pages/docs/llm/chat.mdx
+++ b/website/pages/docs/llm/chat.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Large Language Model > A.I. Chatbot
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## Super A.I. Chatbot
