--- a/website/pages/docs/llm/strategy.mdx
+++ b/website/pages/docs/llm/strategy.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Large Language Model > Documentation Strategy
+---
 import { Callout, Tabs } from 'nextra/components'
 
 ## Description Comment
