--- a/website/pages/docs/protobuf/decode.mdx
+++ b/website/pages/docs/protobuf/decode.mdx
@@ -1,3 +1,6 @@
+---
+title: Guide Documents > Protobuf > decode() functions
+---
 import { Tabs } from 'nextra/components'
 import Alert from '@mui/material/Alert';
 import AlertTitle from '@mui/material/AlertTitle';
